@@ -70,8 +70,8 @@ public class PatientProfileViewTreatmentSteps {
 
     long treatment = treatments.one();
 
-    String request = String.format(
-        "/nbs/api/profile/%d/treatment/%d",
+    String request = 
+        "/nbs/api/profile/%d/treatment/%d".formatted(
         patient,
         treatment);
 
